Overview of changes from 1.1.0-alpha to 1.1.0-beta
==
* New features
  o Minor
    - Anthy
      - hankaku katakana conversion with Anthy-7802 (Etsushi)
    
* Fixes
  o Minor
    - uim-toolbar-gtk
      - prevent startup hang in a rare case (Etsushi)

    - Latin IM
      - update table (Etsushi)

Overview of changes from 1.0.x to 1.1.0-alpha
==
* New features
  o Major
    - icon support for toolbar (Etsushi, YamaKen)
    - menu-based quick IM switching from toolbar (YamaKen, Etsushi)

  o Minor
    - hotkey-based IM toggle has been able to hold per-context state
      (YamaKen)

  o IM related
    - Anthy, Canna, Mana
      - circular Hiragana, Katakana, Hankaku-kana conversion with
	"Muhenkan" key (Shun-ichi TAHARA)
    - Mana
      - support conversion-result learning with mana-0.2.0 (Shun-ichi
        TAHARA, Masanari)

* Fixes
  o Minor
    - general
      - handle 'Kanji' and 'Hiragana_Katakana' keys (Shun-ichi TAHARA)

    - uim-dict-gtk
      - refresh the word list when removing and updating the existing
        items (Etsushi)
    - uim-im-switcher-gtk
      - respond to the cursor movement from keyboard (Etsushi)
    - uim-pref-gtk
      - handle <Meta>, <Super>, and <Hyper> modifiers in the key
	capture widget (Etsushi)
      - distinguish directories and regular files on pathname custom
	widget (Etsushi, YamaKen)
    - uim-pref-qt
      - distinguish directories and regular files on pathname custom
	widget (Etsushi, YamaKen)

    - GTK+ immodule
      - enable <Alt>, <Meta>, <Super>, and <Hyper> modifier key
	handling on X11 (bug #2468, Etsushi)
      - disuse key snooper to improve shortcut key handling (Etsushi)
    - uim-xim
      - fix event handling with flashplayer plugin (Etsushi)
    - uim-fep
      - fix "commit_string" handling and make uim-input-ja working
        again (Konosuke, Masanari)
    - uim.el
      - handle "commit_string" from helper programs and make
        uim-input-ja working (Konosuke)

* Others